--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2997,7 +2997,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 6em 3em 3em 3em;
+				padding: 3em 3em 3em 3em;
 				width: 30%;
 			}
 
@@ -3059,7 +3059,7 @@ input, select, textarea {
 				left: auto;
 				padding: 6em 4em;
 				position: relative;
-				text-align: center;
+				text-align: left;
 				top: auto;
 				width: 100%;
 				display: block;
